# GitPulse-Unraveling-Open-Source-Evolution

./: .gitignore  README.md  main.py  pyproject.toml  run_pipeline.sh  setup.sh
bigquery/: schema.sql
dashboard/: dashboard_requirements.txt  streamlit_dashboard.py
dbt/: dbt_project.yml
dbt/models/: schema.yml
dbt/models/marts/: human_vs_bot_activity.sql  most_active_repos.sql  underrated_repos.sql
dbt/models/staging/: stg_github_events.sql
docs/: docs.md  quickstart.md
ingestion/: README.md  ingest.py  kestra-workflow.yaml  requirements.txt
terraform/: main.tf  variables.tf
